--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
+    "cssnano": "^4.1.10",
     "eslint": "^7.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-loader": "^4.0.2",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "eslint-plugin-standard": "^4.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-cssnext": "^3.1.0",
@@ -40,7 +42,7 @@
     "style-loader": "^1.2.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "thread-loader": "^2.1.3",
+    "terser-webpack-plugin": "^3.0.2",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
