--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config config/webpack.dev.js --progress",
-    "build": "webpack --config config/webpack.prod.js --progress --display-used-exports"
+    "build": "webpack --config config/webpack.prod.js --progress"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +39,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^3.0.0",
+    "preload-webpack-plugin": "^3.0.0-beta.3",
     "style-loader": "^1.2.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
@@ -46,6 +47,7 @@
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
+    "webpack-dashboard": "^3.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
   },
