--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "portfinder": "^1.0.26",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^3.0.0",
     "preload-webpack-plugin": "^3.0.0-beta.3",
