--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config config/webpack.dev.js --progress",
-    "build": "webpack --config config/webpack.prod.js --progress"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.js --progress --hot",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js --progress"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "babel-loader": "^8.1.0",
     "cache-loader": "^4.1.0",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
+    "chalk": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
@@ -48,6 +49,7 @@
     "terser-webpack-plugin": "^3.0.2",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-chain": "^6.4.0",
     "webpack-cli": "^3.3.11",
     "webpack-dashboard": "^3.2.0",
     "webpack-dev-server": "^3.11.0",
@@ -55,6 +57,7 @@
   },
   "dependencies": {
     "antd": "^4.2.5",
+    "cross-env": "^7.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
