--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config config/webpack.dev.js --progress",
+    "dev": "webpack-dev-server --config config/webpack.dev.js --progress --hot",
     "build": "webpack --config config/webpack.prod.js --progress",
     "format": "prettier src/**/*.{js,jsx,css,md} --write && eslint src/**/*.{jsx,js} --fix"
   },
